--- a/package.json
+++ b/package.json
@@ -9,17 +9,27 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^13.0.0",
+    "@react-native-community/masked-view": "*",
+    "@react-navigation/material-bottom-tabs": "6.2.1",
+    "@react-navigation/material-top-tabs": "6.2.1",
     "@react-navigation/bottom-tabs": "^6.5.7",
+    "@react-navigation/elements": "^1.3.17",
     "@react-navigation/native": "^6.1.4",
     "@react-navigation/stack": "^6.3.14",
+    "@react-navigation/drawer": "6.4.1",
     "expo": "~47.0.12",
     "expo-barcode-scanner": "~12.1.0",
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
     "react-native": "0.70.5",
+    "react-native-pager-view": "6.0.1",
+    "react-native-paper": "^4.7.2",
     "react-native-gesture-handler": "~2.8.0",
     "react-native-safe-area-context": "4.4.1",
-    "react-native-screens": "~3.18.0"
+    "react-native-screens": "~3.18.0",
+    "react-native-tab-view": "^3.0.0",
+    "react-native-reanimated": "~2.12.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
